--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -1,3 +1,63 @@
+/**variables couleurs*****/
+/******Police *******/
+/*******reset*********/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+}
 
+body {
+  background: url(../../assets/image/Background.jpg);
+  background-repeat: repeat;
+}
+
+nav {
+  width: 80%;
+  height: 80px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 auto 40px auto;
+}
+nav a {
+  font-family: "Merriweather", serif;
+  font-size: 1.5em;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #fff;
+  padding-bottom: 5px;
+}
+nav a:hover {
+  color: #46a7de;
+  border-bottom: 2px solid #46a7de;
+  padding-bottom: 5px;
+}
+
+header {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+header h1 {
+  color: #fff;
+  font-family: "Merriweather", serif;
+  font-size: 4em;
+  opacity: 0;
+  animation: fadeIn 4s ease-in forwards;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(0px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
 /*# sourceMappingURL=styles.css.map */
