Création de la section Aprops de moi et mise en forme scss

--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -13,6 +13,28 @@ body {
   background-repeat: repeat;
 }
 
+h2 {
+  color: #fff;
+  font-family: "Merriweather", serif;
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 2em;
+}
+
+p {
+  line-height: 30px;
+  margin-bottom: 20px;
+  color: #fff;
+  font-size: 1.1em;
+  font-family: "Raleway", serif;
+}
+
+.dashed-line {
+  border-top: 3px dashed #fff;
+  width: 75%;
+  margin: 0 auto 20px auto;
+}
+
 nav {
   width: 80%;
   height: 80px;
@@ -58,6 +80,41 @@ header h1 {
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+.about_me {
+  width: 100%;
+  margin: 50px;
+  padding: 20px;
+}
+.about_me .infos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 100px;
+  gap: 50px;
+}
+.about_me .infos img {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 4px solid #e8e1c4;
+}
+.about_me .infos_txt .name {
+  font-size: 2.3em;
+  font-weight: 500;
+  font-style: oblique;
+  word-spacing: 10px;
+  margin-bottom: 50px;
+  color: #fff;
+}
+.about_me .infos_txt .city {
+  font-size: 2em;
+  font-weight: 500;
+  font-style: oblique;
+  text-align: center;
+  color: #fff;
 }
 
 /*# sourceMappingURL=styles.css.map */
