--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -117,4 +117,10 @@ header h1 {
   color: #fff;
 }
 
+.technology {
+  width: 100%;
+  margin: 50px;
+  padding: 20px;
+}
+
 /*# sourceMappingURL=styles.css.map */
