Fin de la mise en place de la section technology

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,5 +3,5 @@
 @use "./base/base";
 @use "./layout/menu";
 @use "./layout/header";
-@use "./pages/Apropos.scss";
-@use "./pages/technology.scss";
+@use "./pages/Apropos";
+@use "./pages/technology";
