--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -15,6 +15,12 @@ body {
   background-repeat: repeat;
 }
 
+section {
+  width: 100%;
+  margin: 50px;
+  padding: 20px;
+}
+
 h2 {
   color: variables.$primary-color;
   @include mixin.title;
